config/kubernetes/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-moj
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: contact-moj
  template:
    metadata:
      labels:
        app: contact-moj
    spec:
      containers:
        - name: webapp
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          command: ["./config/docker/run.sh"]
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: /ping
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
        - name: jobs
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          command: ["./config/docker/run-sidekiq.sh"]
        - name: metrics
          imagePullPolicy: Always
          ports:
            - containerPort: 9394
          command: ['sh', '-c', 'bundle exec prometheus_exporter --bind 0.0.0.0']
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
