config/kubernetes/development/ingress-live.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: contact-moj-ingress
  namespace: contact-moj-development
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: app-secrets
    external-dns.alpha.kubernetes.io/set-identifier: contact-moj-ingress-contact-moj-development-green
    external-dns.alpha.kubernetes.io/aws-weight: "0"
spec:
  tls:
    - hosts:
        - development.contact-moj.service.justice.gov.uk
      secretName: contact-moj-certificate
  rules:
    - host: development.contact-moj.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: contact-moj-service
              servicePort: 3000
