config/kubernetes/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contact-moj-ingress
  namespace: contact-moj-development
spec:
  tls:
    - hosts:
        - development.contact-moj.service.justice.gov.uk
      secretName: contact-moj-certificate
  rules:
    - host: development.contact-moj.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: contact-moj-service
              servicePort: 3000
